# arkitekt-app-album-solutions

./: app.py  pyproject.toml
.arkitekt_next/: manifest.yaml
