[project]
name = "arkitekt-app-album-solutions"
version = "0.1.0"
description = "Arkitekt app registering all available album solutions on the system where the app is executed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "album>=0.11.0",
    "arkitekt-next[all]>=0.12.1",
    "mikro-next>=0.1.53",
    "setuptools>=78.1.0",
    "xarray>=2025.3.1",
]
